Add Sangfor VNC Console and batch create actived user (#50)
