# cloudapi-web/src/main/kotlin/cn/edu/buaa/scs/controller/models/VNCConsole.kt
@@ -1,0 +1,22 @@
+/**
+* cloudapi_v2
+* buaa scs cloud api v2
+*
+* The version of the OpenAPI document: 2.0
+* Contact: loheagn@icloud.com
+*
+* NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+* https://openapi-generator.tech
+* Do not edit the class manually.
+*/
+package cn.edu.buaa.scs.controller.models
+
+
+/**
+ * 
+ * @param url 
+ */
+data class VNCConsole(
+    val url: kotlin.String? = null
+) 
+
